--- a/inedx.html
+++ b/inedx.html
@@ -8,7 +8,7 @@
     <title>Glowing - Reveal The Beauty of Skin</title>
 
     <!--
-       - favicon
+       - favicon__ 
     -->
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
